--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,14 @@
-<h1>Welcome#about</h1>
-<p>Find me in app/views/welcome/about.html.erb</p>
+<style>
+  body {
+    background: <%= @color %>;
+  }
+</style>
+
+<h1>About me</h1>
+<p>Lots of interesting stuff</p>
+<p>My favorite color is <%= @color %></p>
+<% if @size > 12 %>
+<p>My shoe size is <%= @size %>. I have HUGE feet</p>
+<% else %>
+<p>My shoe size is <%= @size %></p>
+<% end %>
