--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -4,11 +4,9 @@
   }
 </style>
 
-<h1>About me</h1>
+<h1>About</h1>
 <p>Lots of interesting stuff</p>
 <p>My favorite color is <%= @color %></p>
-<% if @size > 12 %>
-<p>My shoe size is <%= @size %>. I have HUGE feet</p>
-<% else %>
-<p>My shoe size is <%= @size %></p>
-<% end %>
+
+<%= link_to "Blue", about_path(color: "blue"), class: "btn btn-primary" %>
+<%= link_to "Red", about_path(color: "red"), class: "btn btn-primary" %>
