added usa table

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -12,4 +12,15 @@
  *
  *= require_tree .
  *= require_self
- */
+*/
+body {
+  background: url(<%= asset_path "lake.jpeg" %>) no-repeat;
+  background-size: cover;
+}
+.container {
+  background: rgba(255,255,255,0.8);
+}
+.navbar-default .navbar-brand {
+  font-family: 'Marck Script', cursive;
+  color: #000;
+}
