--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
     <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1" aria-expanded="false" style="height: 0.909091px;">
       <ul class="nav navbar-nav">
         <li><%= link_to "About", about_path %></li>
-        <li><a href="#">Link</a></li>
+        <li><%= link_to "Destinations", destinations_path %></li>
         <li class="dropdown">
 
           <ul class="dropdown-menu">
