--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -20,7 +20,7 @@ body {
 .container {
   background: rgba(255,255,255,0.8);
 }
-.navbar-default .navbar-brand {
+.navbar-inverse .navbar-brand {
   font-family: 'Marck Script', cursive;
-  color: #000;
+  color: #fff;
 }
