--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -1,31 +1,32 @@
-<p id="notice"><%= notice %></p>
+<% if notice != nil %>
+  <p id="notice" class="alert alert-success" role="alert">
+    <%= notice %>
+  </p>
+  <% end %>
 
-<h1>Listing Destinations</h1>
+<h1>My Destination Wish List</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>City</th>
-      <th>Country</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="row">
+  <% @destinations.each do |destination| %>
+  <div class="col-md-4">
+    <div class="panel panel-default">
+      <div class="panel-body">
+          <h2><%= destination.city %></h2>
+          <h3><%= destination.country %></h3>
+          <p><%= destination.description %></p>
 
-  <tbody>
-    <% @destinations.each do |destination| %>
-      <tr>
-        <td><%= destination.city %></td>
-        <td><%= destination.country %></td>
-        <td><%= destination.description %></td>
-        <td><%= link_to 'Show', destination %></td>
-        <td><%= link_to 'Edit', edit_destination_path(destination) %></td>
-        <td><%= link_to 'Destroy', destination, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+        <div class="btn-group">
+          <%= link_to 'Show', destination, class: "btn btn-default" %>
+          <%= link_to 'Edit', edit_destination_path(destination), class: "btn btn-default" %>
+          <%= link_to 'Destroy', destination, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default" %>
+        </div>
+      </div>
+    </div>
+  </div>
     <% end %>
-  </tbody>
-</table>
+</div>
 
-<br>
 
-<%= link_to 'New Destination', new_destination_path %>
+
+
+<%= link_to 'New Destination', new_destination_path, class: "btn btn-primary" %>
