--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -1,12 +1,8 @@
 <ul class="nav nav-pills" role="tablist">
   <li><%= link_to "All", destinations_path %></li>
-  <li><%= link_to "New Zealand", destinations_path(country: "new_zealand") %></li>
-  <li><%= link_to "Germany", destinations_path(country: "germany") %></li>
-  <li><%= link_to "England", destinations_path(country: "england") %></li>
-  <li><%= link_to "Saudi Arabia", destinations_path(country: "saudi_arabia") %></li>
-  <li><%= link_to "Papua New Guinea", destinations_path(country: "papua_new_guinea") %></li>
-  <li><%= link_to "Brazil", destinations_path(country: "brazil") %></li>
-  <li><%= link_to "Canada", destinations_path(country: "canada") %></li>
+  <% @my_countries.each do |c| %>
+    <li><%= link_to "#{c.country}", destinations_path(country: c.country)%></li>
+    <% end %>
 </ul>
 
 <% if notice != nil %>
