--- a/app/views/destinations/_form.html.erb
+++ b/app/views/destinations/_form.html.erb
@@ -20,8 +20,16 @@
     <%= f.text_field :country, class: "form-control" %>
   </div>
   <div class="field form-group">
+    <%= f.label :population %><br>
+    <%= f.text_area :population, class: "form-control" %>
+  </div>
+  <div class="field form-group">
     <%= f.label :description %><br>
     <%= f.text_area :description, class: "form-control", rows: "5" %>
+  </div>
+  <div class="field form-group">
+    <%= f.label "photo" %><br>
+    <%= f.file_field :avatar %>
   </div>
   <div class="actions form-group">
     <%= f.submit class: "btn btn-primary" %>
