--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -20,6 +20,10 @@
       <div class="panel-body">
           <h2><%= destination.city %></h2>
           <h3><%= destination.country %></h3>
+          <% if destination.avatar_file_name != nil %>
+          <%= image_tag destination.avatar.url(:medium), class: "img-responsive" %>
+          <% end %>
+          <p>Population: <%= destination.population %></p>
           <p><%= destination.description %></p>
 
         <div class="btn-group">
